Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18953

Hash index on partial char field not working

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • None
    • 10.4.4
    • Server
    • None

    Description

      eval create table t1 (
      c char(10),
      unique key a using hash (c(1))
      ) engine=myisam;
      show create table t1;
      insert into t1 values ('б');
      --error ER_DUP_ENTRY
      insert into t1 values ('бб');
      --error ER_DUP_ENTRY
      insert into t1 values ('ббб');
      drop table t1;
      
      

      mysqltest: At line 9: query 'insert into t1 values ('бб')' succeeded - should have failed with errno 1062...
      
      

      And also enable ctype_utf8mb4_innodb and myisam , which is disabled because of this bug.

      Attachments

        Activity

          People

            sachin.setiya.007 Sachin Setiya (Inactive)
            sachin.setiya.007 Sachin Setiya (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5h
                5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.