MDEV-18953 Hash index on partial char field not working

Write cmp_max for Field_string.